<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsedAppBarTopic"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/bgheader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/background_coffe"
                android:visibility="visible"
                app:layout_collapseMode="pin"
                tools:ignore="ContentDescription" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar" />


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/spacing_big">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"
                    android:textSize="28sp"
                    tools:text="Título" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/ImageRatingBarMini"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title"
                    android:layout_margin="@dimen/spacing_medium"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.5" />

                <TextView
                    android:id="@+id/tv_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_alignBaseline="@+id/ratingBar"
                    android:layout_toEndOf="@+id/ratingBar"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    tools:text="3.8" />

            </RelativeLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_frameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorGray"
                android:layout_margin="@dimen/spacing_default"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_default"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/str_photo"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_photos"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginBottom="@dimen/spacing_default"
                    android:nestedScrollingEnabled="false" />

                <TextView
                    android:id="@+id/tv_nothing_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_default"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/str_photo_empty"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_default"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/str_about"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_default"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_big"
                    android:drawablePadding="@dimen/spacing_medium"
                    android:drawableStart="@drawable/ic_time"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_default"
                    android:drawablePadding="@dimen/spacing_medium"
                    android:drawableStart="@drawable/ic_phone"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_default"
                    android:drawablePadding="@dimen/spacing_medium"
                    android:drawableStart="@drawable/ic_pin"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_default"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/str_review"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false" />

                <TextView
                    android:id="@+id/tv_nothing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_default"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/str_comment_empty"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/spacing_default"
                    android:background="?android:selectableItemBackground"
                    android:drawableEnd="@drawable/ic_arrows"
                    android:drawablePadding="@dimen/spacing_medium"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/spacing_medium"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/str_all_comments" />

            </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

